--- a/style.css
+++ b/style.css
@@ -1,56 +1,78 @@
 * {
   text-align: center;
+box-sizing: border-box; 
+display: inline-block;
+
 }
 
 body {
-  font-family: 'Arial', 'Helvetica Neue', helvetica, sans-serif;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   color: #777;
   background: #777;
-  width: 960px;
-  font-size: 18px;
+  font-size: 16pt; 
 }
 
 
 header {
+width: 960px;
+display: inline-block;
 background: #ebebeb;
-width: 495px;
-padding: 20px;
+padding: 20px; /** gives it thickness**/
 margin: 5px 0px;
 }
   
 nav {
+width: 960px;
+display: inline-block;
 background: #ebebeb;
-width: 495px;
 padding: 20px;
 margin-bottom: 10px;
 }
-
 section {
- float: left;
+  float: left;
+  padding:10px 0px 10px;
+}
+
+
+#full {
+  background-color: #ebebeb;
   width: 495px;
-
+  
 }
-
-aside {
-
-}
-
-article {
+#article {
+  background-color: #777;
   color: #ebebeb;
-  background:green;
+  width: 475px;
+  margin-top: 10px;
+  padding-top: 10px;
 }
-
 h1 {
-  color:#777;
-  background: #ebebeb;
-  float:center;
+  background-color: #ebebeb;
+  color: #777;
+  padding: 10px;
+  width: 450px;
 }
 
 p {
-  color:#777;
-  background: #ebebeb;
+  background-color: #ebebeb;
+  color: #777;
+  width: 450px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+aside {
+  background-color: #ebebeb;
+  width: calc(950px - 495px);
+  float: auto;
+  margin-left: 10px;
+  height: 264px;
 }
 
 footer {
-  
+  clear:both;
+  margin: 15px 0px;
+  padding: 10px;
+  background-color: #ebebeb;
+  width: 960px;
+
 }
